objects/Journey__c.object
<CustomObject>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <description>Reason why we lost the journey</description>
        <label>Unqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inaccurate/Test Data</fullName>
                </value>
                <value>
                    <fullName>No interest/need/fit</fullName>
                </value>
                <value>
                    <fullName>Competitor Company</fullName>
                </value>
                <value>
                    <fullName>No authority (student, intern, wrong dept.)</fullName>
                </value>
                <value>
                    <fullName>Duplicate record with another email</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Amex PGA Ineligible Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MC_Drip_Status__c</fullName>
        <description>This field is used by Marketing Cloud to update the Drip Status</description>
        <label>MC Drip Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Identified_By__c</fullName>
        <description>Shows the user who identified the HQ Market.</description>
        <formula>IF(ISBLANK(Primary_Lead__c),Primary_Contact__r.Market_Identified_By__r.FirstName &amp; " " &amp; Primary_Contact__r.Market_Identified_By__r.LastName,Primary_Lead__r.Market_Identified_By__r.FirstName &amp; " " &amp; Primary_Lead__r.Market_Identified_By__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the user who identified the HQ Market.</inlineHelpText>
        <label>HQ Market Identified By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Identified_On__c</fullName>
        <formula>IF(ISBLANK(Primary_Lead__c), Primary_Contact__r.Market_Identified_On__c,Primary_Lead__r.Market_Identified_On__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HQ Market Identified On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <inlineHelpText>Populated on referral journeys.</inlineHelpText>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alexandria</fullName>
                </value>
                <value>
                    <fullName>Alpharetta</fullName>
                </value>
                <value>
                    <fullName>Amsterdam</fullName>
                </value>
                <value>
                    <fullName>Ann Arbor</fullName>
                </value>
                <value>
                    <fullName>Arlington</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Balston</fullName>
                </value>
                <value>
                    <fullName>Baltimore</fullName>
                </value>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
                <value>
                    <fullName>Bangkok</fullName>
                </value>
                <value>
                    <fullName>Barcelona</fullName>
                </value>
                <value>
                    <fullName>Barranquilla</fullName>
                </value>
                <value>
                    <fullName>Be'er Sheva</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Bellevue</fullName>
                </value>
                <value>
                    <fullName>Belo Horizonte</fullName>
                </value>
                <value>
                    <fullName>Bengaluru</fullName>
                </value>
                <value>
                    <fullName>Berkeley</fullName>
                </value>
                <value>
                    <fullName>Berlin</fullName>
                </value>
                <value>
                    <fullName>Bethesda</fullName>
                </value>
                <value>
                    <fullName>Bogota</fullName>
                </value>
                <value>
                    <fullName>Bogotá</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Boulder</fullName>
                </value>
                <value>
                    <fullName>Brasilia</fullName>
                </value>
                <value>
                    <fullName>Brisbane</fullName>
                </value>
                <value>
                    <fullName>Bronx</fullName>
                </value>
                <value>
                    <fullName>Brooklyn</fullName>
                </value>
                <value>
                    <fullName>Brussels</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Markets_Interested__c</fullName>
        <label>Markets Interested</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alexandria</fullName>
                </value>
                <value>
                    <fullName>Alpharetta</fullName>
                </value>
                <value>
                    <fullName>Amsterdam</fullName>
                </value>
                <value>
                    <fullName>Ann Arbor</fullName>
                </value>
                <value>
                    <fullName>Arlington</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Balston</fullName>
                </value>
                <value>
                    <fullName>Baltimore</fullName>
                </value>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
                <value>
                    <fullName>Bangkok</fullName>
                </value>
                <value>
                    <fullName>Barcelona</fullName>
                </value>
                <value>
                    <fullName>Barranquilla</fullName>
                </value>
                <value>
                    <fullName>Be'er Sheva</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Bellevue</fullName>
                </value>
                <value>
                    <fullName>Belo Horizonte</fullName>
                </value>
                <value>
                    <fullName>Bengaluru</fullName>
                </value>
                <value>
                    <fullName>Berkeley</fullName>
                </value>
                <value>
                    <fullName>Berlin</fullName>
                </value>
                <value>
                    <fullName>Bethesda</fullName>
                </value>
                <value>
                    <fullName>Bogota</fullName>
                </value>
                <value>
                    <fullName>Bogotá</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Boulder</fullName>
                </value>
                <value>
                    <fullName>Brasilia</fullName>
                </value>
                <value>
                    <fullName>Brisbane</fullName>
                </value>
                <value>
                    <fullName>Bronx</fullName>
                </value>
                <value>
                    <fullName>Brooklyn</fullName>
                </value>
                <value>
                    <fullName>Brussels</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>IF( Primary_Contact__r.MobilePhone &lt;&gt; null, 
HYPERLINK("javascript:sendCTIMessage('/CLICK_TO_DIAL?DN='+encodeURIComponent('" + Primary_Contact__r.MobilePhone + "')+'&amp;ID="+Id+"&amp;ENTITY_NAME=Contact&amp;OBJECT_NAME='+encodeURIComponent('"+ Primary_Contact__r.LastName +"')+'&amp;DISPLAY_NAME='+encodeURIComponent('Contact'))", Primary_Contact__r.MobilePhone + IMAGE('/img/btn_dial_inline.gif', '')), '')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mode_of_Assignment__c</fullName>
        <inlineHelpText>This field will give the information about Journey assignment</inlineHelpText>
        <label>Mode of Assignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual Creation</fullName>
                    <default>true</default>
                    <label>Manual Creation</label>
                </value>
                <value>
                    <fullName>Kickbox Importer</fullName>
                </value>
                <value>
                    <fullName>Lead Assignment</fullName>
                </value>
                <value>
                    <fullName>Campaign Assignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Move_In_Time_Frame__c</fullName>
        <description>This field will use to store if tour book from building page of the site.</description>
        <inlineHelpText>This field will use to store if tour book from building page of the site.</inlineHelpText>
        <label>Move In Time Frame</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flexible</fullName>
                </value>
                <value>
                    <fullName>ASAP</fullName>
                </value>
                <value>
                    <fullName>Sep 2018</fullName>
                </value>
                <value>
                    <fullName>NextMonth</fullName>
                    <label>Next Month</label>
                </value>
                <value>
                    <fullName>This Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NMD_Next_Contact_Date__c</fullName>
        <description>Date on which Journey Primary Member should be next contacted on.

This is key to manage the reminders for the Journey.</description>
        <label>Next Contact Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Needs_Assessment__c</fullName>
        <description>Better way to collect needs info post discovery call when a journey is not a handoff but a nurture journey</description>
        <label>Needs Assessment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Next_Followup_Time__c</fullName>
        <label>Next Followup Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Desks__c</fullName>
        <label>Number Of Desks</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Desk__c</fullName>
        <formula>Primary_Lead__r.Number_of_Desks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Desk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Desks_2016__c</fullName>
        <description>This is a new field to capture no of desks from website and other external systems, moving forward we will be referring this field only</description>
        <inlineHelpText>This is a new field to capture no of desks from website and other external systems, moving forward we will be referring this field only</inlineHelpText>
        <label>Number of Desks 2016</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 desk</fullName>
                </value>
                <value>
                    <fullName>2-5 desks</fullName>
                </value>
                <value>
                    <fullName>6-10 desks</fullName>
                </value>
                <value>
                    <fullName>11-20 desks</fullName>
                </value>
                <value>
                    <fullName>21-50 desks</fullName>
                </value>
                <value>
                    <fullName>51+ desks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Full_Time_Employees__c</fullName>
        <label>Number of Full Time Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nurture_Reason__c</fullName>
        <description>To Map the Lead Nurture Reason</description>
        <label>Nurture Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event Space Inquiry</fullName>
                </value>
                <value>
                    <fullName>Unable to reach, but a good fit</fullName>
                </value>
                <value>
                    <fullName>No Immediate Need/Budget</fullName>
                </value>
                <value>
                    <fullName>With competitor/other lease</fullName>
                </value>
                <value>
                    <fullName>Location not currently available</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>NMD Qualified</fullName>
                </value>
                <value>
                    <fullName>NMD Follow-up request</fullName>
                </value>
                <value>
                    <fullName>Nurture due to Journey expiration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offerings__c</fullName>
        <description>The Outbound team is looking to capture what they are offering people to get them through the door so they can track success</description>
        <inlineHelpText>Track what wework is offering for the end user</inlineHelpText>
        <label>Offerings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Offered Discounts</fullName>
                </value>
                <value>
                    <fullName>Offered 1 Day Trial</fullName>
                </value>
                <value>
                    <fullName>Offered Week Trial</fullName>
                </value>
                <value>
                    <fullName>Invited to an Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <label>Other Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outreach_Result__c</fullName>
        <label>Outreach Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Left Voicemail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outreach_Stage__c</fullName>
        <description>Captures the value of the follow-up from the NMD team</description>
        <inlineHelpText>Captures the value of the follow-up from the NMD team</inlineHelpText>
        <label>Outreach Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call 1</fullName>
                </value>
                <value>
                    <fullName>Call 2</fullName>
                </value>
                <value>
                    <fullName>Manual Outreach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_SFID__c</fullName>
        <description>This field will be populated when this journey is been creating from lead or owner and contains the ownerId of lead or contact</description>
        <inlineHelpText>Lead/Contact Owner ID</inlineHelpText>
        <label>Owner SFID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Mailing_City__c</fullName>
        <description>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</description>
        <inlineHelpText>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</inlineHelpText>
        <label>Personal Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Mailing_Country__c</fullName>
        <description>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</description>
        <inlineHelpText>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</inlineHelpText>
        <label>Personal Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Mailing_PostalCode__c</fullName>
        <description>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</description>
        <inlineHelpText>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</inlineHelpText>
        <label>Personal Mailing PostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Mailing_State__c</fullName>
        <description>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</description>
        <inlineHelpText>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</inlineHelpText>
        <label>Personal Mailing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Mailing_Street__c</fullName>
        <description>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</description>
        <inlineHelpText>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</inlineHelpText>
        <label>Personal Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>IF(Primary_Contact__c &lt;&gt; null, IF( Primary_Contact__r.Phone  &lt;&gt; null, 
HYPERLINK("javascript:sendCTIMessage('/CLICK_TO_DIAL?DN='+encodeURIComponent('" + Primary_Contact__r.Phone + "')+'&amp;ID="+Id+"&amp;ENTITY_NAME=Contact&amp;OBJECT_NAME='+encodeURIComponent('"+ Primary_Contact__r.LastName +"')+'&amp;DISPLAY_NAME='+encodeURIComponent('Contact'))" , Primary_Contact__r.Phone +  IMAGE('/img/btn_dial_inline.gif', '') ), ''),IF( Primary_Lead__r.Phone  &lt;&gt; null, 
HYPERLINK("javascript:sendCTIMessage('/CLICK_TO_DIAL?DN='+encodeURIComponent('" + Primary_Lead__r.Phone + "')+'&amp;ID="+Id+"&amp;ENTITY_NAME=Contact&amp;OBJECT_NAME='+encodeURIComponent('"+ Primary_Lead__r.LastName +"')+'&amp;DISPLAY_NAME='+encodeURIComponent('Lead'))" , Primary_Lead__r.Phone +  IMAGE('/img/btn_dial_inline.gif', '') ), ''))</description>
        <formula>IF(Primary_Contact__c &lt;&gt; null, IF( Primary_Contact__r.Phone &lt;&gt; null, 
HYPERLINK("javascript:sendCTIMessage('/CLICK_TO_DIAL?DN='+encodeURIComponent('" + Primary_Contact__r.Phone + "')+'&amp;ID="+Id+"&amp;ENTITY_NAME=Contact&amp;OBJECT_NAME='+encodeURIComponent('"+ Primary_Contact__r.LastName +"')+'&amp;DISPLAY_NAME='+encodeURIComponent('Contact'))" , Primary_Contact__r.Phone ), ""),IF( Primary_Lead__r.Phone &lt;&gt; null, 
HYPERLINK("javascript:sendCTIMessage('/CLICK_TO_DIAL?DN='+encodeURIComponent('" + Primary_Lead__r.Phone + "')+'&amp;ID="+Id+"&amp;ENTITY_NAME=Contact&amp;OBJECT_NAME='+encodeURIComponent('"+ Primary_Lead__r.LastName +"')+'&amp;DISPLAY_NAME='+encodeURIComponent('Lead'))" , Primary_Lead__r.Phone), ""))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone(old)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_of_Desks__c</fullName>
        <description>to help NMD outbound capture desk before they handoff - prioritizing journeys and forecasting future impact based on nurture journeys</description>
        <label>Potential # of Desks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Primary Contact of the Journey</description>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Journeys</relationshipLabel>
        <relationshipName>Journeys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Email__c</fullName>
        <description>This field is populated by process builder when a change occurs in the related primary contact or primary lead email.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If journey is for a Lead this will be the Primary Lead. Only Primary Contact or Primary Lead can be specified not both.</description>
        <label>Primary Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Journeys</relationshipLabel>
        <relationshipName>Journeys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Phone__c</fullName>
        <description>This field is populated by process builder when a change occurs in the related primary contact or primary lead phone.</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prompted_By__c</fullName>
        <description>When uploading journeys NMD outbound can capture what trigger they came from - i.e funding, etc - just like how we want to track lead source we should also track success of triggers for future prospecting</description>
        <label>Prompted By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quick_Quote_Location__c</fullName>
        <description>Quick Quote location is mapped from journey or contact</description>
        <label>Quick Quote Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebel_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox is TRUE if information on Journey was updated from Rebel&lt;&gt; SFMC integration</description>
        <label>Rebel Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.RecordType.Name, IF( Primary_Contact__c != NULL, Primary_Contact__r.RecordType.Name, "" ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Fail_Reason__c</fullName>
        <label>Referral Fail Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Journeys (Referrer)</relationshipLabel>
        <relationshipName>Journeys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Restart_Journey_Reason__c</fullName>
        <label>Restart Journey Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecondaryLead_Demographic_Score_DateTime__c</fullName>
        <description>This Filed will be used to populate the Lead Demographic Score DateTime of the Lead which is deleted after dedupe</description>
        <label>SecondaryLead Demographic Score DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Secondary_Lead_Demographic_Score__c</fullName>
        <description>This field will be used to Populate the Lead Score of Secondary Lead which is deleted</description>
        <label>Secondary Lead Demographic Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sender_Email__c</fullName>
        <formula>CASE(Owner:Queue.QueueName , 

"Enzigma Queue", "vidu@enzigma.com", 
"West Coast Queue", "Stephanie.Manley@wework.com",
"South Queue", "thomas.dwyer@wework.com",
"East Coast Queue", "mac.donoghue@wework.com",
"New York City Queue", "nikki.matters@wework.com",
"London Queue", "vincent.opitz@wework.com",
"Mexico Queue", "pablo.melendez@wework.com",
"Welive DC Queue", "Welive@wework.com",
"WeLive NYC Queue", "Welive@wework.com",
"Brazil Queue", "lilian.herculano@wework.com",
"Australia Queue", "tony.burder@wework.com",
"Beijing and Shanghai", "serena.wang@wework.com",
"Korea Queue", "eunhyeon.kyea@wework.com",
"Hong Kong Queue", "ringo.wong@wework.com",
"Germany Queue", "vincent.opitz@wework.com",
"Bogotá Queue", "juan.quirozmoreno@wework.com",
"Buenos Aires Queue", "dyeriksonn.almeidacordeiro@wework.com",
"Rio de Janeiro Queue","gabriel.abreu@wework.com",
"Sau Paulo Queue","dyeriksonn.almeidacordeiro@wework.com",
"Tokyo Queue", "kenta.sueyoshi.wework.com",
"", Owner:User.Email,

"JoinUs@WeWork.com")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sender Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_First_Name__c</fullName>
        <formula>CASE( Owner:Queue.QueueName , 

"Enzigma Queue", "Vidu", 
"West Coast Queue", "Stephanie",
"South Queue", "Tommy",
"East Coast Queue", "Mac",
"New York City Queue", "Nikki",
"London Queue", "Vincent",
"Mexico Queue", "Pablo",
"Welive DC Queue", "Arie",
"WeLive NYC Queue", "Yvonne",
"Brazil Queue", "Lilian",
"Australia Queue", "Tony",
"Beijing and Shanghai", "Serena",
"Korea Queue", "Eunhyeon",
"Hong Kong Queue", "Ringo",
"Germany Queue", "Vincent",
"Bogotá Queue", "Juan",
"Buenos Aires Queue", "Dyeriksonn",
"Rio de Janeiro Queue","Gabriel",
"Sau Paulo Queue","Dyeriksonn",
"Tokyo Queue", "Kenta",
"",  Owner:User.FirstName,

"Susie")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sender First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Last_Name__c</fullName>
        <formula>CASE( Owner:Queue.QueueName , 

"Enzigma Queue", "Mangrulkar", 
"West Coast Queue", "Manley", 
"South Queue", "Dwyer", 
"East Coast Queue", "Donoghue", 
"New York City Queue", "Matters", 
"London Queue", "Opitz",
"Mexico Queue", "Melendez",
"Welive DC Queue", "Cutler",
"WeLive NYC Queue", "Parks",
"Brazil Queue", " Herculano",
"Australia Queue", "Burder",
"Beijing and Shanghai", "Wang",
"Korea Queue", "Kyea", 
"Hong Kong Queue", "Wong",
"Germany Queue", "Opitz",
"Bogotá Queue", "Quiroz",
"Buenos Aires Queue", "Almeida Cordeiro",
"Rio de Janeiro Queue","Abreu", 
"Sau Paulo Queue","Almeida Cordeiro", 
"Tokyo Queue", "Sueyoshi",
"", Owner:User.LastName, 

"Romero")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sender Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Number__c</fullName>
        <description>Stage Number of current Stage, This is how we can determine where in the Journey Customer is.</description>
        <formula>CASE(TEXT(Status__c),
"Started",1.0,
"Completed", 10.0,
"Transferred", 50.0,
"Unqualified", 70.0,
0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage #</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Stage of the Journey, which will tell us the maximum progress the customer has made.

It will not give us latest Stage but will give maximum stage that is if the journey is completed or lost, or if it is stuck in waitlist.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>New Field to Capture Journey Status</description>
        <label>Journey Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Started</fullName>
                    <default>true</default>
                    <label>Started</label>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Trying to Reach</fullName>
                </value>
                <value>
                    <fullName>In Contact</fullName>
                </value>
                <value>
                    <fullName>Nurture</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
                <value>
                    <fullName>No Contact</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
                <value>
                    <fullName>Auto-Complete/Expiration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timeline_Assessment__c</fullName>
        <description>Better way to collect this timeline post discovery call when a journey is not a handoff but a nurture journey</description>
        <label>Timeline Assessment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ts_and_Cs_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ts and Cs Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <description>Globally Unique Identifier of the record used by all systems at WeWork</description>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unomy_Acquisitions__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Acquisitions__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Acquisitions__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Acquisitions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Alexa_Global_Rank__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Alexa_Global_Rank__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Alexa_Global_Rank__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Alexa Global Rank</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>